Fix card/modal styling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -389,8 +389,8 @@ body {
 }
 
 .content-img {
-  width: 450px;
-  height: 600px;
+  /* width: 450px;
+  height: 600px; */
   object-fit: cover;
   overflow: hidden;
   z-index: -1;
@@ -473,7 +473,7 @@ body {
   transition: all 0.3s ease-in-out;
   position: absolute;
   overflow: hidden;
-  width: 100%;
+  /* width: 100%; */
 }
 
 #play-btn {
